--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
     "express": "^4.16.4",
-    "express-fileupload": "^1.1.3-alpha.1",
+    "express-fileupload": "^1.1.6",
     "express-session": "^1.15.6",
     "jsonwebtoken": "8.3.0",
     "mongoose": "^5.4.17",
